<resources>
    <string name="app_name">Pools Store</string>

    <string name="downloading">Downloading…</string>
    <string name="title_file_download">APK is downloading</string>
    <string name="storage_access_required">Storage access is required to downloading the file.</string>
    <string name="storage_permission_denied">Storage permission request was denied.</string>
    <string name="ok">OK</string>


    <!--    profile-->
    <string name="profile_option_manager_app">ManagerApp</string>
    <string name="profile_option_favorite">Favorite</string>
    <string name="profile_option_subscriptions">Subscriptions</string>
    <string name="profile_option_logout">Log Out</string>
    <string name="profile_option_support_feedback">Support &amp; Feedback</string>
    <string name="profile_option_term_of_user">Term of Use</string>
    <string name="profile_option_private_policy">Private Policy</string>

    <!--title home app game -->
    <string name="title_see_more">See More</string>
    <string name="title_trending">Trending</string>
    <string name="title_new_game">New Game</string>
    <string name="title_play_to_earn">Play to Earn</string>
    <string name="title_for_you">For you</string>
    <string name="title_host_discount">Host Discount</string>
    <string name="title_recommend">Recommend</string>
    <string name="title_no_internet">No Internet</string>
    <string name="title_no_data">No Data</string>
    <string name="title_favorite">Favorite</string>

    <string name="title_pools_collection">Pools Collection</string>
    <string name="title_total_support">Total Support</string>

    <string name="title_tab_leader_board">Leaderboard</string>
    <string name="title_tab_offer">Offer</string>
    <string name="title_tab_category">Category</string>

    <!--title detail-->
    <string name="title_detail_un_know">Unknow</string>
    <string name="title_detail_free">Free</string>
    <string name="title_detail_size">Size</string>
    <string name="title_detail_download">Download</string>
    <string name="title_detail_genre">Genre</string>
    <string name="title_detail_install">Install</string>
    <string name="title_detail_about">About</string>
    <string name="title_detail_see_more">See More</string>
    <string name="title_detail_rating">Rating</string>
    <string name="title_detail_write_a_review_add_point">Write a Review + 5</string>
    <string name="title_detail_write_a_review">Write a Review</string>
    <string name="title_detail_write_a_review_not_point">Write a Review</string>
    <string name="title_detail_my_rating">My Rating</string>
    <string name="title_detail_review">Review</string>
    <string name="title_detail_what_is_on_your_mind">What is on your mind ?</string>
    <string name="title_detail_submit">Submit</string>
    <string name="title_detail_rating_and_review">Rating &amp; Review</string>
    <string name="title_detail_no_preview">No Preview</string>
    <string name="title_detail_adds_recommend">Ads recommend</string>
    <string name="title_detail_similar">Similar</string>

    <!--title nav header-->
    <string name="title_nav_header_search">Search</string>


    <!--title nav tab option-->
    <string name="title_tab_option_for_you">For you</string>
    <string name="title_tab_option_leaderboard">Leaderboard</string>
    <string name="title_tab_option_offer">Offer</string>
    <string name="title_tab_option_category">Category</string>

    <!--title gift fragment-->
    <string name="title_gift">Gift</string>
    <string name="title_gift_event">Event</string>
    <string name="title_gift_daily_mission">Daily Mission</string>

    <!--title login activity-->
    <string name="title_login">Login</string>


    <!--title dialog-->
    <string name="title_dialog_successfully">Successfully</string>
    <string name="title_dialog_your_reward_successfully_claim">Your reward successfully claim.</string>
    <string name="title_dialog_OK">OK</string>
    <string name="title_dialog_NO">No</string>
    <string name="title_dialog_network_connection_disable">Your network connection is unstable\nPlease try again</string>
    <string name="title_dialog_notification">Notification</string>
    <string name="title_dialog_notification_content_hard">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</string>
    <string name="title_dialog_notice">Notice</string>
    <string name="title_dialog_notice_are_your_sure">Are you sure clear all items here?</string>
    <string name="title_dialog_Yes">Yes</string>


    <string name="str_banner_ads">ca-app-pub-3940256099942544/9214589741</string>
    <string name="str_ads_google_app_id">ca-app-pub-3940256099942544~3347511713</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No Data</string>
</resources>