<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootViewDialogErrorNetWork"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/space_start_end"
        android:layout_marginVertical="@dimen/space_start_end"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/dimen16dp"
        app:cardElevation="@dimen/dimen3dp"
        app:strokeColor="?attr/color_primary">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:background="@color/color_212121"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="@dimen/dimen25dp"
                android:layout_height="@dimen/dimen25dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/dimen10dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/baseline_close_24"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen20dp"

                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintTop_toBottomOf="@+id/ivClose"
                android:text="@string/title_dialog_notice"/>

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen20dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/tvYes"
                android:layout_marginVertical="@dimen/dimen10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                android:textSize="@dimen/text_size_16"
                android:text="@string/title_dialog_notice_are_your_sure"/>
            <TextView
                android:id="@+id/tvYes"
                android:text="@string/title_dialog_Yes"
                android:background="@drawable/bg_gradient_corner_8"
                android:layout_width="wrap_content"
                android:paddingHorizontal="@dimen/dimen40dp"
                android:paddingVertical="@dimen/dimen10dp"
                app:layout_constraintTop_toTopOf="@+id/tvNo"
                android:layout_margin="@dimen/dimen15dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/color_757575"
                app:layout_constraintBottom_toBottomOf="@+id/tvNo"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvNo"
                android:text="@string/title_dialog_NO"
                android:background="@drawable/bg_gradient_corner_8"
                android:layout_width="wrap_content"
                android:paddingHorizontal="@dimen/dimen40dp"
                android:layout_margin="@dimen/dimen15dp"
                android:paddingVertical="@dimen/dimen10dp"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/tvMessage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>