<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootViewDialogActionSuccess"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/space_start_end"
        android:layout_marginVertical="@dimen/space_start_end"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="@dimen/dimen16dp"
        app:cardElevation="@dimen/dimen3dp"
        app:strokeColor="@color/black"
        app:strokeWidth="@dimen/dimen1dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivSuccessfully"
                android:layout_width="@dimen/dimen60dp"
                android:layout_height="@dimen/dimen60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/dimen20dp"
                android:src="@drawable/ic_check"/>
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen15dp"
                android:layout_marginEnd="@dimen/space_start_end"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_24"
                app:layout_constraintTop_toBottomOf="@id/ivSuccessfully"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/title_dialog_successfully"/>
            <TextView
                android:id="@+id/tvBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_start_end"
                android:layout_marginTop="@dimen/dimen15dp"
                android:layout_marginEnd="@dimen/space_start_end"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/text_color_gray_CFCFCF"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/title_dialog_your_reward_successfully_claim"/>


            <TextView
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen48dp"
                android:layout_marginTop="@dimen/dimen15dp"
                android:layout_marginEnd="@dimen/dimen10dp"
                android:gravity="center"
                android:minWidth="@dimen/dimen115dp"
                android:paddingHorizontal="@dimen/dimen10dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20"
                android:text="@string/title_dialog_OK"
                android:background="@drawable/bg_gradient_corner_8"
                android:layout_marginBottom="@dimen/dimen15dp"
                app:layout_constraintTop_toBottomOf="@id/tvBody"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>