<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg_color"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dimen30dp"
            android:layout_height="@dimen/dimen30dp"
            android:tint="@color/white"
            android:id="@+id/ivLeft"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/dimen15dp"
            android:src="@drawable/ic_left"/>
        <TextView
            android:id="@+id/tvTitle"
            android:text="@string/title_gift"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/text_size_16"
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivLeft"
            app:layout_constraintBottom_toBottomOf="@+id/ivLeft"
            app:layout_constraintStart_toStartOf="@+id/ivLeft"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/ivGift"
                android:layout_width="match_parent"
                android:src="@drawable/imagebggift"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                android:layout_marginTop="@dimen/dimen30dp"
                android:layout_height="@dimen/dimen200dp"
                tools:ignore="NotSibling" />
            <TextView
                android:id="@+id/tvEvent"
                android:layout_width="wrap_content"
                android:textSize="@dimen/text_size_16"
                android:text="@string/title_gift_event"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/dimen10dp"
                android:layout_marginHorizontal="@dimen/dimen15dp"
                app:layout_constraintTop_toBottomOf="@+id/ivGift"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen15dp"
                android:layout_marginVertical="@dimen/dimen15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEvent"
                tools:itemCount="3"
                tools:listitem="@layout/item_gift" />

            <TextView
                android:id="@+id/tvDailyMission"
                android:layout_width="wrap_content"
                android:textSize="@dimen/text_size_16"
                android:text="@string/title_gift_daily_mission"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/dimen30dp"
                app:layout_constraintStart_toStartOf="@+id/rvEvent"
                app:layout_constraintTop_toBottomOf="@+id/rvEvent"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDailyMission"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/dimen15dp"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_gift"
                tools:itemCount="3"
                android:layout_marginVertical="@dimen/dimen15dp"
                app:layout_constraintTop_toBottomOf="@+id/tvDailyMission"
                app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>